Prevent overflow on mobile

--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -8,7 +8,7 @@ html,
 body,
 #root {
   height: 100vh;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 body {
@@ -32,4 +32,6 @@ li {
   flex-direction: column;
   height: 100%;
   justify-content: space-between;
+  overflow-x: hidden;
+  width: 100vw;
 }
